--- a/MyWebApp/Pages/Shared/_Layout.cshtml
+++ b/MyWebApp/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Impressum">Impressum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Datenschutz">Datenschutz</a>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - MyWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - MyWebApp - <a asp-area="" asp-page="/Impressum">Impressum</a> - <a asp-area="" asp-page="/Datenschutz">Datenschutz</a>
         </div>
     </footer>
 
