--- a/MyWebApp/Pages/Index.cshtml
+++ b/MyWebApp/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Thank you for visiting this page, which is currently under construction.</p>
 </div>
 
